live-initrd-sidux (0.0.42) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 21 Jan 2007 15:33:00 +0100

live-initrd-sidux (0.0.41) unstable; urgency=low

  * no lazy umount anymore.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 21 Jan 2007 15:31:31 +0100

live-initrd-sidux (0.0.40) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 19 Jan 2007 13:31:27 +0100

live-initrd-sidux (0.0.39) unstable; urgency=low

  * Do lazy umount of /cdrom in remount_knoppix but (why) is this needed?

 -- Niall Walsh <niallwalsh@users.berlios.de>  Fri, 19 Jan 2007 07:33:32 +0000

live-initrd-sidux (0.0.38) unstable; urgency=low

  * fix SCSI module dependencies part III.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 18 Jan 2007 20:41:37 +0100

live-initrd-sidux (0.0.37) unstable; urgency=low

  * fix SCSI module dependencies part II.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 18 Jan 2007 19:59:07 +0100

live-initrd-sidux (0.0.36) unstable; urgency=low

  * fix SCSI module dependencies.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 18 Jan 2007 17:53:25 +0100

live-initrd-sidux (0.0.35) unstable; urgency=low

  * Fix hardcoded /KNOPPIX
  * Fix wrong mount command in copy_to().

 -- Kel Modderman <kel@otaku42.de>  Fri, 19 Jan 2007 00:06:26 +1000

live-initrd-sidux (0.0.34) unstable; urgency=low

  * hwsetup doesn#T accept -p anymore.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 15 Jan 2007 23:02:48 +0100

live-initrd-sidux (0.0.33) unstable; urgency=low

  * cosmetics.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Jan 2007 19:17:56 +0100

live-initrd-sidux (0.0.32) unstable; urgency=low

  * fix stray rm.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Jan 2007 18:01:42 +0100

live-initrd-sidux (0.0.31) unstable; urgency=low

  * handle boottime.kmap.gz as well.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Jan 2007 15:12:47 +0100
