@@ -1,3 +1,4 @@
-proc            /proc           proc    defaults        0       0
-sysfs           /sys            sysfs   noauto          0       0
-/dev/pts        /dev/pts        devpts  mode=0622       0       0 
+# /etc/fstab: static file system information.
+#
+# <file system> <mount point>   <type>  <options>  <dump>  <pass>
+
