@@ -1,4 +1,0 @@
-root::0:root
-@FLL_LIVE_USER@::1000:@FLL_LIVE_USER@
-slocate::21:root
-nobody::-1:nobody
