@@ -1,3 +1,0 @@
-root:*:0:0:@FLL_DISTRO_NAME@ Administrator:/root:/bin/bash
-@FLL_LIVE_USER@:*:1000:1000:@FLL_DISTRO_NAME@ User:/home/@FLL_LIVE_USER@:/bin/bash
-nobody:*:-1:-1:Nobody:/:/bin/true
