@@ -1,2 +1,0 @@
-# Insert nameservers here
-# nameserver 127.0.0.1
