@@ -1,3 +1,0 @@
-root:*:11312:0:99999:7:::
-@FLL_LIVE_USER@:*:11312:0:99999:7:::
-nobody:*:11312:0:99999:7:::
