@@ -1,8 +1,12 @@
 live-initrd-sidux (0.0.42) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 21 Jan 2007 15:33:00 +0100
+  [ Kel Modderman ]
+  * Remove bogus templates from initrd.
+
+ -- Kel Modderman <kel@otaku42.de>  Tue, 23 Jan 2007 12:28:25 +1000
 
 live-initrd-sidux (0.0.41) unstable; urgency=low
 
